--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -5,3 +5,13 @@
 .gameTable {
     margin-inline: auto;
 }
+
+.gameOverBox {
+    border-width: 2px;
+    border-style: inset;
+    /* border colors supplied by calling box via inline style*/
+    padding: 0.5em 1em;
+    width: fit-content;
+    text-align: center;
+    margin-inline: auto;
+}
