--- a/src/components/Cube.css
+++ b/src/components/Cube.css
@@ -6,7 +6,7 @@
     box-shadow: 2px 2px 4px 0px gray;
     margin: 2px 4px 4px 2px;
 
-    background-color: whitesmoke;
+    background-color: #eee;
     color: black;
 
     grid-template: repeat(3, 1fr) / repeat(3, 1fr);
