major version bumps
major update:
* react/react-dom -> 19
* vite -> 6
* uuid -> 11

switch css from scss to native css (now with nesting)

--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -4,7 +4,7 @@
   padding: 1em;
   margin: 0.5em;
   background-color: whitesmoke;
-  // width: fit-content;
+  /* // width: fit-content; */
   display: inline-block;
   vertical-align: top;
 
